starlight: ensure autocomplete image dropdown is fully visible
Fixes #226.

--- a/starlight/app/assets/stylesheets/application_default.scss
+++ b/starlight/app/assets/stylesheets/application_default.scss
@@ -1,3 +1,8 @@
 /*
  *= require application.scss
 */
+
+// https://gitlab.com/surfliner/surfliner/issues/226
+div.st-blocks:last-child {
+  padding-bottom: 200px;
+}
