--- a/starlight/app/assets/stylesheets/application_ucsb.scss
+++ b/starlight/app/assets/stylesheets/application_ucsb.scss
@@ -180,6 +180,11 @@ ul.navbar-nav {
   }
 }
 
+// https://gitlab.com/surfliner/surfliner/issues/226
+div.st-blocks:last-child {
+  padding-bottom: 200px;
+}
+
 ////////////
 // FOOTER
 ////////////
