--- a/starlight/app/assets/stylesheets/application_ucsd.scss
+++ b/starlight/app/assets/stylesheets/application_ucsd.scss
@@ -240,6 +240,11 @@
   {
     margin-top: 0;
   }
+
+  // https://gitlab.com/surfliner/surfliner/issues/226
+  div.st-blocks:last-child {
+    padding-bottom: 200px;
+  }
 }
 
 //---
